--- a/slyd/media/js/templates/topbar-extraction.handlebars
+++ b/slyd/media/js/templates/topbar-extraction.handlebars
@@ -10,7 +10,7 @@
 		</span>
 		<span style="float:left;">
 			{{#if showContinueBrowsing}}
-				{{view ASTool.ButtonView action="continueBrowsing" label="Continue browsing" class="blue-button"}}
+				{{view ASTool.ButtonView action="continueBrowsing" label="Finish Editing" class="blue-button"}}
 			{{/if}}
 		</span>
 	</div>
