--- a/slyd/media/js/templates/toolbox-spider.handlebars
+++ b/slyd/media/js/templates/toolbox-spider.handlebars
@@ -1,11 +1,11 @@
 
-<div style="text-align:center;font-size:1.1em;margin:10px 0px 10px 0px">
+<div style="visibility:hidden;text-align:center;font-size:1.1em;margin:10px 0px 10px 0px">
 	{{#view ASTool.RenameTextField value=name}}
-  		<span class="editable-name">Spider {{name}}</span>
+  		<span class="editable-name">{{name}}</span>
 	{{/view}}
 </div>
 
-<div class="accordion">	
+<div class="accordion" style="visibility:hidden;">	
 	<h3>Initialize</h3>
 	<div class="section">
 		<h4>Start Pages</h4>
@@ -47,7 +47,7 @@
 	<h3>Crawling</h3>
 	<div class="section">
 		{{view ASTool.FollowSelect value=controller.links_to_follow}}
-		
+
 		{{#if displayNofollow}}
 			<div style="margin-top:10px; margin-bottom: 10px">
 				{{view ASTool.CheckBox checked=respect_nofollow name="respectNoFollow"}}
@@ -121,6 +121,7 @@
 	</div>
 </div>
 
-<div style="margin-top:10px;text-align:center">
+<div style="visibility:hidden;margin-top:10px;text-align:center">
 	{{view ASTool.ButtonView action="saveSpider" icon="ui-icon-circle-arrow-n" label="Save spider" class="blue-button big"}}
 </div>
+
