--- a/slyd/media/js/templates/floating-annotation-widget.handlebars
+++ b/slyd/media/js/templates/floating-annotation-widget.handlebars
@@ -17,7 +17,7 @@
 			{{view view.attributeSelect}}
 			{{view view.fieldSelect}}
 			<div style="display:inline-block;margin-top:1px">
-			<span {{action showCreateFieldWidget target="view"}}>{{view ASTool.ButtonView icon="ui-icon-circle-plus" class="clear-button" label="field"}}</span>
+			<!--<span {{action showCreateFieldWidget target="view"}}>{{view ASTool.ButtonView icon="ui-icon-circle-plus" class="clear-button" label="field"}}</span>-->
 			</div>
 		</div>
 	{{else}}
