--- a/slyd/media/js/templates/toolbox-project.handlebars
+++ b/slyd/media/js/templates/toolbox-project.handlebars
@@ -24,5 +24,5 @@
 </div>
 
 <div style="margin-top:10px;text-align:center">
-	{{view ASTool.ButtonView action="finishProject" icon="ui-icon-circle-arrow-n" label="Finish Project" class="blue-button big" disabled=true}}
+	{{view ASTool.ButtonView action="finishProject" icon="ui-icon-circle-arrow-n" label="Finish Project" class="blue-button big"}}
 </div>
