--- a/slyd/media/js/templates/topbar-browse.handlebars
+++ b/slyd/media/js/templates/topbar-browse.handlebars
@@ -51,49 +51,18 @@
 
 
 		{{#if showItems}}
-			{{#if controller.extractedItems.length}}
+
+			{{#if controller.getTemplateValues.length}}
 				<div class="extracted-items-container">
 					<span style="float:right;pointer-events:all">
 						{{view ASTool.ButtonView action="toggleShowItems" class="clear-button" icon="ui-icon-closethick"}}
 					</span>
-					<h3 style="text-align:center" class="important-label">Displaying {{controller.extractedItems.length}} extracted items</h3>
+					<h3 style="text-align:center" class="important-label">Displaying {{controller.getTemplateValues.length}} extracted items</h3>
 					<div style="max-height:500px; padding:8px;" class="scrolling-container">
-						{{#each controller.extractedItems}}
-							<div style="margin-bottom:20px">
-								{{#view ASTool.ExtractedItemView extractedItem=this}}
-									{{#each view.textFields}}
-										<div style="margin-bottom:5px">
-											<span class="small-label blue-label">{{this.name}}:</span>
-											{{#each this.value}}
-												<span style="color:white;word-wrap:break-word;">
-													{{view ASTool.CollapsibleText fullText=this}}
-												</span>
-											{{/each}}
-										</div>
-									{{/each}}
-									{{#each view.imageFields}}
-										<div style="margin-bottom:5px">
-											<span class="small-label blue-label">{{this.name}}:</span>
-											{{#each this.value}}
-												<span style="color:white;word-wrap:break-word;">{{this}}</span>
-												<div style="margin:10px;text-align:center">{{view ASTool.ImageView src=this width="200px"}}</div>
-											{{/each}}	
-										</div>
-									{{/each}}
-									{{#if view.variants}}
-										<h3 class="important-label">Item variants</h3>
-										{{#each view.variants}}
-											<div style="margin-bottom:8px">
-												{{#each fields}}
-													<div style="margin-bottom:3px">
-														<span class="small-label green-label">{{this.name}}:</span>
-														<span style="color:white;word-wrap:break-word;">{{this.value}}</span>
-													</div>
-												{{/each}}
-											</div>
-										{{/each}}
-									{{/if}}
-								{{/view}}
+						{{#each controller.getTemplateValues}}
+							<div style="margin-bottom:6px">
+                <span class="small-label blue-label">{{this.field}}:</span>
+                <span style="color:white;word-wrap:break-word;">{{this.value}}</span>
 							</div>
 						{{/each}}
 					</div>
