--- a/slyd/media/js/templates/toolbox-project.handlebars
+++ b/slyd/media/js/templates/toolbox-project.handlebars
@@ -7,6 +7,7 @@
 	</div>
   -->
 
+  <!--
 	<h4>Tasks</h4>
 	<div>
 		<div class="scrolling-container" style="max-height:600px">
@@ -16,15 +17,23 @@
           {{#if this.finished}}
 					  {{view ASTool.ButtonView icon="ui-icon-check" class="blue-button"}}
           {{/if}}
+  -->
 					<!--{{view ASTool.ButtonView action="deleteSpider" argument=this icon="ui-icon-trash" class="red-button"}}-->
+  <!--
 				</div>
 			{{else}}
 				<h3>No tasks for this project.</h3>
 			{{/each}}
 		</div>
 	</div>
+  -->
 </div>
 
+<!--
 <div style="margin-top:10px;text-align:center">
 	{{view ASTool.ButtonView action="finishProject" icon="ui-icon-circle-arrow-n" label="Finish Project" class="blue-button big"}}
+</div>
+-->
+<div style="margin-top:240px;text-align:center">
+  <h1>Task Complete!</h1>
 </div>
